--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(Vulkan REQUIRED)
 
-add_executable(VulkanTut VulkanTutorial.cpp)
+add_executable(VulkanTut src/VulkanTutorial.cpp)
 
 target_link_libraries(VulkanTut Vulkan::Vulkan)
 
