change distance on keypress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Vulkan REQUIRED)
 find_package(PkgConfig REQUIRED)
+
+pkg_search_module(GLM REQUIRED glm)
 pkg_search_module(GLFW REQUIRED glfw3)
+
+include_directories(${GLM_INCLUDE_DIRS})
 include_directories($(GLFW_INCLUDE_DIRS))
 
 add_executable(VulkanTut src/VulkanTutorial.cpp external/stb_image.h external/tiny_obj_loader.h)
